[package]
name = "paas"
authors = ["Quentin Konieczko <qu3nt1n@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "paas. Pandoc As A Service"
default-run = "paas"


[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
