[package]
name = "paas"
authors = ["Quentin Konieczko <qu3nt1n@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "paas. Pandoc As A Service"
default-run = "paas"


[dependencies]
axum = "0.6"
bytes = "1.10"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
tokio-rustls = "0.24"
rustls = "0.21"
